<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/home_ic"
        android:enabled="true"
        android:title="@string/home" />

    <item
        android:id="@+id/transactionFragment"
        android:enabled="true"
        android:icon="@drawable/transaction_ic"
        android:title="@string/transaction" />

    <item
        android:id="@+id/notificationFragment"
        android:enabled="true"
        android:icon="@drawable/notification_ic"
        android:title="@string/notification" />

    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/settings_ic"
        android:title="@string/settings" />
</menu>
