<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/pattern_bgrd">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/white"
                android:padding="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/createPaymentLinkTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/create_new_payment_link"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/paymenetLinkNameTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:text="@string/payment_link_name"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/createPaymentLinkTxt" />

                <EditText
                    android:id="@+id/paymentLinkField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_background"
                    android:hint="@string/name_your_payment_link"
                    android:padding="15dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/paymenetLinkNameTxt" />


                <TextView
                    android:id="@+id/descriptionTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/paymentLinkField" />

                <EditText
                    android:id="@+id/descriptionTxtField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_background"
                    android:hint="@string/optional"
                    android:padding="15dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/descriptionTxt" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/the_payment_link_name_and_description_will_appear_on_the_invoice_as_entered_above"
                    android:textColor="@color/grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/descriptionTxtField" />


                <TextView
                    android:id="@+id/amountTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/amount"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/grey_bgrd_stroke"
                    android:padding="15dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/amountTxt">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ngn"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.aldoapps.autoformatedittext.AutoFormatEditText
                    android:id="@+id/amountField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/grey_bgrd_stroke"
                    android:ellipsize="end"
                    android:hint="@string/enter_amount_customers_will_pay_in_ngn"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingStart="14dp"
                    android:paddingTop="14dp"
                    android:paddingEnd="30dp"
                    android:paddingBottom="14dp"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@id/country"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/country"
                    app:layout_constraintTop_toTopOf="@id/country" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:background="@drawable/deep_gray_corner_bgrd"
                    android:gravity="center"
                    android:padding="5dp"
                    android:text="@string/per_unit"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@id/amountField"
                    app:layout_constraintEnd_toEndOf="@id/amountField"
                    app:layout_constraintTop_toTopOf="@id/amountField" />

                <TextView
                    android:id="@+id/infoTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginTop="10dp"
                    android:padding="5dp"
                    android:text="@string/minimum_plan_amount_is_ngn_100_leave_empty_to_allow_customers_enter_desired_amount"
                    android:textColor="@color/grey"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/amountField" />

                <TextView
                    android:id="@+id/phoneTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/mobile_number"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/infoTxt" />

                <EditText
                    android:id="@+id/phoneField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_background"
                    android:hint="@string/set_a_phone_number"
                    android:inputType="phone"
                    android:padding="15dp"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phoneTxt" />


                <TextView
                    android:id="@+id/back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableStart="@drawable/double_back_btn"
                    android:drawablePadding="5dp"
                    android:padding="10dp"
                    android:text="@string/go_back"
                    android:textColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="@id/cancelButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phoneField" />

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/createLinkBtn"
                    app:layout_constraintStart_toEndOf="@id/back"
                    app:layout_constraintTop_toBottomOf="@id/phoneField" />


                <Button
                    android:id="@+id/createLinkBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/create_link"
                    android:textAllCaps="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cancelButton"
                    app:layout_constraintTop_toBottomOf="@id/phoneField" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/progressBar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:elevation="10dp"
            android:visibility="invisible"
            app:cpb_background_progressbar_color="#b6bbd8"
            app:cpb_background_progressbar_width="8dp"
            app:cpb_indeterminate_mode="true"
            app:cpb_progress_direction="to_right"
            app:cpb_progressbar_color="@color/deep_orange"
            app:cpb_progressbar_width="8dp"
            app:cpb_round_border="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
