<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.cardview.widget.CardView
            android:id="@+id/bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/add_bvn"
                android:textColor="@color/black" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/kindlyTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/kindly_enter_your_bvn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bar" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/kindlyTxt">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <EditText
                    android:id="@+id/inputBvnField"
                    android:maxLines="1"
                    android:inputType="number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/grey"
                    android:hint="@string/input_your_bvn_11_digits"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/bvnPrompt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/enter_your_11_digits_bvn_number"
                    android:textColor="@color/dark_grey"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="@id/inputBvnField"
                    app:layout_constraintStart_toStartOf="@id/inputBvnField"
                    app:layout_constraintTop_toBottomOf="@id/inputBvnField" />


                <EditText
                    android:id="@+id/phoneNumberField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:maxLines="1"
                    android:inputType="number"
                    android:backgroundTint="@color/grey"
                    android:hint="@string/phone_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/bvnPrompt" />

                <TextView
                    android:id="@+id/phonePrompt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/this_has_to_be_the_phone_number_tied_to_your_bvn"
                    android:textColor="@color/dark_grey"
                    android:textSize="11sp"
                    app:layout_constraintEnd_toEndOf="@id/phoneNumberField"
                    app:layout_constraintStart_toStartOf="@id/phoneNumberField"
                    app:layout_constraintTop_toBottomOf="@id/phoneNumberField" />


                <EditText
                    android:id="@+id/dateOfBirthField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/grey"
                    android:clickable="true"
                    android:maxLines="1"
                    android:drawableEnd="@drawable/calendar_ic"
                    android:focusable="false"
                    android:hint="@string/enter_date_of_birth"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/phonePrompt" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/nextBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@color/deep_orange"
                    android:text="Next"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/dateOfBirthField" />

                <TextView
                    android:id="@+id/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/dial_565_0_to_get_bvn"
                    android:textColor="@color/dark_grey"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@id/nextBtn"
                    app:layout_constraintStart_toStartOf="@id/nextBtn"
                    app:layout_constraintTop_toBottomOf="@id/nextBtn" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
