<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:background="@drawable/rounded_corner_white_bgr">

        <TextView
            android:id="@+id/whyTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:text="@string/why_we_need_your_bvn_no_underline"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@color/gray_100"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/cancelBtn"
            android:padding="15dp"
            app:srcCompat="@drawable/cancel_ic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/message"
            app:layout_constraintTop_toBottomOf="@id/whyTxt"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="@color/grey"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/we_only_to_need_to_access_to_your_full_name_phone_number_and_date_of_birth"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <androidx.cardview.widget.CardView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/message"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            app:cardCornerRadius="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <TextView
                android:background="#FDEEEE"
                android:padding="10dp"
                android:text="@string/linking_your_bvn_doesn_t_give_waya_access_to_your_bank_information_or_balances"
                android:gravity="center"
                android:textColor="#EB5757"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
